# nytaxi-dbt

./: .gitignore  main.py  pyproject.toml
nyc_taxi_airflow/dags/: gcs_trigger_list_files_dag.py
nyc_taxi_analytics/: dbt_project.yml
nyc_taxi_analytics/models/dims/: dim_date.sql  dim_location_zone.sql  dim_payment.sql  dim_ratecode.sql  dim_vendor.sql  schema.yml
nyc_taxi_analytics/models/facts/: fact_yellow_trip.sql  schema.yml
nyc_taxi_analytics/models/marts/trips/: mart_airport_trip_summary.sql  mart_fare_bins.sql  mart_location_summary.sql  mart_location_time_heatmap.sql  mart_monthly_trends.sql  mart_peak_hours.sql  mart_revenue_by_payment_type.sql  mart_top_zones_by_revenue.sql  mart_trips_daily_summary.sql  schema.yml
nyc_taxi_analytics/models/sources/: src_nyc_yellow.yml
nyc_taxi_analytics/models/staging/: schema.yml  stg_yellow_tripdata.sql
